<resources>
    <string name="app_name">PBookkeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">账单编号</string>
    <string name="recent_biss">最近账单</string>
    <string name="new_bill">创建账单</string>
    <string name="recv_unit">收货单位</string>
    <string name="bill_date">选择账单日期</string>
    <string name="title_activity_edit_bill">EditBillActivity</string>
    <string name="save_bill">保存</string>
    <string name="name">品名：</string>
    <string name="number">数量：</string>
    <string name="comment">备注：</string>
    <string name="price">单价：</string>
    <string name="total">金额：</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="auto_calc">计算</string>
    <string name="settings">设置</string>
    <string name="commet_settins">备注设置</string>
    <string name="edit_comment_settings">修改备注</string>
    <string name="hit_comment_settings">用“/”分隔</string>
</resources>
